--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #1f1f1f;
+    background-color: #ff0000;
     color: #333;
     line-height: 1.6;
 }
