--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #ff0000;
-    color: #333;
+    color: #00ff00;
     line-height: 1.6;
 }
 header {
