--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,8 @@ body {
     font-family: sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #ff0000;
-    color: #00ff00;
+    background-color: #333;
+    color: #eee;
     line-height: 1.6;
 }
 header {
