--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
     background-color: #333;
     color: #eee;
     line-height: 1.6;
+    font-family: 'Roboto Mono', sans-serif;
 }
 header {
     background-color: #333;
