--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Roboto Mono', sans-serif;
+    font-family: "Roboto Mono", monospace;
     margin: 0;
     padding: 0;
     background-color: #333;
