--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@ body {
     background-color: #333;
     color: #eee;
     line-height: 1.6;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 header {
     background-color: #333;
